Split "./bach" source folders